# LuminosityFit

./: .cproject  .devcontainer.json  .dockerignore  .gitignore  .project  CMakeLists.txt  LinkDef.h  LumiFitStructs.h  PndLmdComparisonStructs.h  PndLmdLumiHelper.cxx  PndLmdLumiHelper.h  PndLmdPlotter.cxx  PndLmdPlotter.h  PndLmdRuntimeConfiguration.cxx  README.md  ROOTPlotHelper.hpp  agent.py  agent.sh  dataconfig.json  dataconfig_xy.json  experiment.config  fitconfig-fast.json  fitconfig.json  genEnvVarFile.py  lmdEnvFile.env  pyproject.toml  recoconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  simconfig.json  singLmdFit.sh  vertex_fitconfig.json
apps/: CMakeLists.txt  analyzeAcceptances.cxx  analyzeResolutionMapData.cxx  calculateElasticCrossSection.cxx  checkDivergenceSmearing.cxx  checkFramework.cxx  checkMCInfoTrackMatching.cxx  checkTilted2DDPMModel.cxx  compareAcceptances.cxx  createKoaFitData.cxx  createLmdFitData.cxx  createRawRecoilProtonSpectrum.C  dataconfig_xy.json  determineBeamOffset.cxx  determineDivergence.cxx  determineLumiFitSystematics.cxx  determineLuminosity.py  determineMomentumCut.C  extractLuminosityValues.cxx  fitRawDPMElasticData.cxx  fitconfig.json  generatePbarPElasticScattering.cxx  makeFrameworkTestPlots.C  makeResolutionPlots.C  makeResolutionPlots.cxx  makeTalkPlots.cxx  mergeLmdData.cxx  phiSliceData.cxx  plot2DDPMModel.cxx  plotDPMModelParts.cxx  plotIPDistribution.cxx  plotLumiFitResults.cxx  plotPhiSlicedLumiFitResults.cxx  plotResolutionParametrization.cxx  plotShifted2DDPMModel.cxx  resolutionModelFitTesting1D.cxx  runLmdFit.cxx
data/: CMakeLists.txt  KoaCombinedDataReader.cxx  KoaCombinedDataReader.h  KoaSeperateDataReader.cxx  KoaSeperateDataReader.h  LinkDef.h  PndLmdAbstractData.cxx  PndLmdAbstractData.h  PndLmdAcceptance.cxx  PndLmdAcceptance.h  PndLmdAngularData.cxx  PndLmdAngularData.h  PndLmdCombinedDataReader.cxx  PndLmdCombinedDataReader.h  PndLmdDataFacade.cxx  PndLmdDataFacade.h  PndLmdDataReader.cxx  PndLmdDataReader.h  PndLmdFitDataBundle.cxx  PndLmdFitDataBundle.h  PndLmdFitStorage.cxx  PndLmdFitStorage.h  PndLmdHistogramData.cxx  PndLmdHistogramData.h  PndLmdMapData.cxx  PndLmdMapData.h  PndLmdSeperateDataReader.cxx  PndLmdSeperateDataReader.h  TrackData.h
fit/: CMakeLists.txt  LinkDef.h  PndLmdFitFacade.cxx  PndLmdFitFacade.h  PndLmdFitOptions.cxx  PndLmdFitOptions.h  PndLmdFitStorage.cxx  PndLmdFitStorage.h  PndLmdLumiFitResult.cxx  PndLmdLumiFitResult.h
model/: AsymmetricDoubleGaussianModel1D.cxx  AsymmetricDoubleGaussianModel1D.h  AsymmetricGaussianModel1D.cxx  AsymmetricGaussianModel1D.h  CMakeLists.txt  CachedModel2D.cxx  CachedModel2D.h  PndLmdBackgroundModel1D.cxx  PndLmdBackgroundModel1D.h  PndLmdDPMAngModel1D.cxx  PndLmdDPMAngModel1D.h  PndLmdDPMAngModel2D.cxx  PndLmdDPMAngModel2D.h  PndLmdDPMMTModel1D.cxx  PndLmdDPMMTModel1D.h  PndLmdDPMModelParametrization.cxx  PndLmdDPMModelParametrization.h  PndLmdDifferentialSmearingConvolutionModel2D.cxx  PndLmdDifferentialSmearingConvolutionModel2D.h  PndLmdDivergenceSmearingModel2D.cxx  PndLmdDivergenceSmearingModel2D.h  PndLmdE760LikeModelParametrization.cxx  PndLmdE760LikeModelParametrization.h  PndLmdE760ModelParametrization.cxx  PndLmdE760ModelParametrization.h  PndLmdFastDPMAngModel2D.cxx  PndLmdFastDPMAngModel2D.h  PndLmdModelFactory.cxx  PndLmdModelFactory.h  PndLmdROOTDataModel1D.cxx  PndLmdROOTDataModel1D.h  PndLmdROOTDataModel2D.cxx  PndLmdROOTDataModel2D.h  PndLmdSignalBackgroundModel1D.cxx  PndLmdSignalBackgroundModel1D.h  PndLmdSmearingConvolutionModel2D.cxx  PndLmdSmearingConvolutionModel2D.h  PndLmdSmearingDoubleGaussianModelParametrization1D.cxx  PndLmdSmearingDoubleGaussianModelParametrization1D.h  PndLmdSmearingGaussianModelParametrization1D.cxx  (+5 more)
model_framework/: CMakeLists.txt  ProjectWideSettings.h  README.md
model_framework/core/: Model.cxx  Model.h  Model1D.cxx  Model1D.h  Model2D.cxx  Model2D.h  ModelDomainVar.cxx  ModelDomainVar.h  ModelPar.cxx  ModelPar.h  ModelParSet.cxx  ModelParSet.h  ModelParameterHandler.cxx  ModelParameterHandler.h  ModelStructs.h  Parametrization.cxx  Parametrization.h  ParametrizationModel.cxx  ParametrizationModel.h  ParametrizationProxy.cxx  ParametrizationProxy.h
model_framework/documentation/: MyDoxyfile
model_framework/fit/: EstimatorOptions.cxx  EstimatorOptions.h  ModelControlParameter.cxx  ModelControlParameter.h  ModelEstimator.cxx  ModelEstimator.h  ModelFitFacade.cxx  ModelFitFacade.h  ModelFitResult.cxx  ModelFitResult.h  ModelMinimizationControlParameter.cxx  ModelMinimizationControlParameter.h  ModelMinimizer.cxx  ModelMinimizer.h
model_framework/fit/data/: Data.cxx  Data.h  DataPointProxy.cxx  DataPointProxy.h  DataStructs.h
model_framework/fit/estimatorImpl/: Chi2Estimator.cxx  Chi2Estimator.h  LogLikelihoodEstimator.cxx  LogLikelihoodEstimator.h  UnbinnedLogLikelihoodEstimator.cxx  UnbinnedLogLikelihoodEstimator.h
model_framework/models1d/: DoubleGaussianModel1D.cxx  DoubleGaussianModel1D.h  ExponentialModel1D.cxx  ExponentialModel1D.h  GaussianModel1D.cxx  GaussianModel1D.h  PolynomialModel1D.cxx  PolynomialModel1D.h  StepFunction1D.cxx  StepFunction1D.h
model_framework/models2d/: BoxModel2D.cxx  BoxModel2D.h  DataModel2D.cxx  DataModel2D.h  GaussianModel2D.cxx  GaussianModel2D.h
model_framework/operators1d/: AdditionModel1D.cxx  AdditionModel1D.h  ProductModel1D.cxx  ProductModel1D.h
model_framework/operators1d/convolution/: NumericConvolutionModel1D.cxx  NumericConvolutionModel1D.h  SmearingConvolutionModel1D.cxx  SmearingConvolutionModel1D.h
model_framework/operators1d/integration/: IntegralStrategy1D.cxx  IntegralStrategy1D.h  (+4 more)
model_framework/operators2d/: ProductModel2D.cxx  ProductModel2D.h  SmearingConvolutionModel2D.cxx  SmearingConvolutionModel2D.h
model_framework/visualization/: ModelVisualizationProperties1D.cxx  ModelVisualizationProperties1D.h
ui/: CMakeLists.txt  PndLmdDataFacade.cxx  PndLmdDataFacade.h  PndLmdFitFacade.cxx  PndLmdFitFacade.h  PndLmdPlotter.cxx  PndLmdPlotter.h  PndLmdRuntimeConfiguration.cxx  PndLmdRuntimeConfiguration.h
(+194 files in other folders)
