set(SRCS
AsymmetricDoubleGaussianModel1D.cxx
AsymmetricGaussianModel1D.cxx
CachedModel2D.cxx
PndLmdBackgroundModel1D.cxx
PndLmdDPMAngModel1D.cxx
PndLmdDPMAngModel2D.cxx
PndLmdDPMMTModel1D.cxx
PndLmdDPMModelParametrization.cxx
PndLmdDifferentialSmearingConvolutionModel2D.cxx
PndLmdDivergenceSmearingModel2D.cxx
PndLmdE760LikeModelParametrization.cxx
PndLmdE760ModelParametrization.cxx
PndLmdFastDPMAngModel2D.cxx
PndLmdModelFactory.cxx
PndLmdROOTDataModel1D.cxx
PndLmdROOTDataModel2D.cxx
PndLmdSignalBackgroundModel1D.cxx
PndLmdSmearingConvolutionModel2D.cxx
PndLmdSmearingDoubleGaussianModelParametrization1D.cxx
PndLmdSmearingGaussianModelParametrization1D.cxx
PndLmdSmearingGaussianModelParametrization2D.cxx
PndLmdSmearingModel2D.cxx
)

add_library(LmdModel SHARED ${SRCS})

target_include_directories(LmdModel
	PRIVATE ${ROOT_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
target_link_libraries(LmdModel 
	PUBLIC Model
	PRIVATE LmdUI Boost::thread ${ROOT_LIBRARIES} pthread
	INTERFACE LmdFitData
)
